# python-project-83-local

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
page_analyzer/: 1.py  __init__.py  app.py  db.py  db_new.py  web_utils.py
page_analyzer/templates/: 1.html  Base.html  index.html
page_analyzer/templates/elements/: footer.html  form.html  messages.html  navbar.html
page_analyzer/templates/urls/: index.html  url.html
